--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,14 @@
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.30.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "~19.1.17",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.9.3"
+  }
 }
