--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/stack": "^7.6.14",
     "expo": "~54.0.31",
+    "expo-auth-session": "^7.0.10",
+    "expo-crypto": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "^15.0.10",
     "firebase": "^12.8.0",
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
