--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:prompt": "ts-node src/scripts/test-prompt.ts"
+    "test:prompt": "ts-node src/scripts/test-book.ts",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
